@@ -1,6 +1,6 @@
 # -*- tcl -*-
 #
-# $Id: idx.html,v 1.4 2004/07/31 04:53:36 andreas_kupries Exp $
+# $Id: idx.html,v 1.5 2004/08/10 07:01:32 andreas_kupries Exp $
 #
 # Engine to convert a docidx document into HTML.
 #
