@@ -1,6 +1,6 @@
 # -*- tcl -*-
 #
-# $Id: toc.wiki,v 1.3 2004/07/22 05:11:44 andreas_kupries Exp $
+# $Id: toc.wiki,v 1.4 2004/08/10 07:01:32 andreas_kupries Exp $
 #
 # Engine to convert a doctoc document into Wiki markup.
 #
