@@ -8,7 +8,7 @@
 # Copyright (c) 1998-2000 by Ajuba Solutions.
 # All rights reserved.
 #
-# RCS: @(#) $Id: graph.test,v 1.16 2004/08/05 05:05:34 andreas_kupries Exp $
+# RCS: @(#) $Id: graph.test,v 1.17 2004/08/10 07:01:33 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
