@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: matrix.tcl,v 1.17 2004/08/10 06:18:07 andreas_kupries Exp $
+# RCS: @(#) $Id: matrix.tcl,v 1.18 2004/08/10 07:01:33 andreas_kupries Exp $
 
 package require Tcl 8.2
 
